added a new feature called progressive image loader from Craig Buckler. still has a slight bug where the image only loads the full image after 2 clicks only.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
   <title>My Second App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- progressive images.js by craigbuckler  -->
+  <!--
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.css">
+  <script src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script>
+  -->
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,10 +34,139 @@
           font-size: 3.5rem;
         }
       }
+
+      .progressive {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  outline: none;
+}
+.progressive img {
+  display: block;
+  width: 100%;
+  max-width: none;
+  height: auto;
+  border: 0;
+}
+.progressive img.preview {
+  filter: blur(2vw);
+  transform: scale(1.05);
+}
+.progressive img.reveal {
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: progressiveReveal 1s linear;
+}
+@keyframes progressiveReveal {
+  0% {
+    transform: scale(1.05);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
     </style>
   
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    <!-- progressive image load by Craig Buckler -->
+    window.addEventListener &&
+    window.addEventListener(
+    "load",
+    function () {
+      "use strict";
+      var e = document.body;
+      if (
+        e.getElementsByClassName &&
+        e.querySelector &&
+        e.classList &&
+        e.getBoundingClientRect
+      ) {
+        var t,
+          n = "replace",
+          i = "preview",
+          s = "reveal",
+          r = document.getElementsByClassName("progressive " + n),
+          o =
+            window.requestAnimationFrame ||
+            function (e) {
+              e();
+            };
+        ["pageshow", "scroll", "resize"].forEach(function (e) {
+          window.addEventListener(e, a, { passive: !0 });
+        }),
+          window.MutationObserver &&
+            new MutationObserver(a).observe(e, {
+              subtree: !0,
+              childList: !0,
+              attributes: !0,
+            }),
+          c();
+      }
+      function a() {
+        t =
+          t ||
+          setTimeout(function () {
+            (t = null), c();
+          }, 300);
+      }
+      function c() {
+        r.length &&
+          o(function () {
+            for (var e, t, n = window.innerHeight, i = 0; i < r.length; )
+              0 < (t = (e = r[i].getBoundingClientRect()).top) + e.height &&
+              n > t
+                ? u(r[i])
+                : i++;
+          });
+      }
+      function u(e, t) {
+        e.classList.remove(n);
+        var r = e.getAttribute("data-href") || e.href,
+          a = e.querySelector("img." + i);
+        if (r && a) {
+          var c = new Image(),
+            l = e.dataset;
+          l &&
+            (l.srcset && (c.srcset = l.srcset), l.sizes && (c.sizes = l.sizes)),
+            (c.onload = function () {
+              r === e.href &&
+                ((e.style.cursor = "default"),
+                e.addEventListener("click", function (e) {
+                  e.preventDefault();
+                }));
+              var t = c.classList;
+              (c.className = a.className),
+                t.remove(i),
+                t.add(s),
+                (c.alt = a.alt || ""),
+                o(function () {
+                  e.insertBefore(c, a.nextSibling).addEventListener(
+                    "animationend",
+                    function () {
+                      e.removeChild(a), t.remove(s);
+                    }
+                  );
+                });
+            }),
+            (t = 1 + (t || 0)) < 3 &&
+              (c.onerror = function () {
+                setTimeout(function () {
+                  u(e, t);
+                }, 3e3 * t);
+              }),
+            (c.src = r);
+        }
+      }
+    },
+    !1
+  );
+  </script>
 </body>
 </html>
